--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
             <div class="col-md-8">
               <h2 class="text-white mb-5 heading">Contact</h2>
 
-              <form action="mailto:kurpaige@gmail.com">
+              <form action="https://mailto:kurpaige@gmail.com">
                     
                     
 
