updates to the main page

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <li><a href="#section-contact" class="nav-link">Contact</a></li>
       </ul>
       <ul class="social js-clone-nav">
-        <li><a href="https://www.facebook.com/kurpaige"><span class="icon-facebook"></span></a></li>
-        <li><a href="https://twitter.com/KureenP"><span class="icon-twitter"></span></a></li>
+        <li><a href="https://www.facebook.com/KurPhotography"><span class="icon-facebook"></span></a></li>
+        <li><a href="https://twitter.com/KurPhotography"><span class="icon-twitter"></span></a></li>
         <li><a href="https://www.instagram.com/kurpaige/"><span class="icon-instagram"></span></a></li>
       </ul>
     </div>
