--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
               <figure class="mb-5" data-aos="fade-up"><img src="images/bio.png" alt="Image" class="img-fluid w-50 rounded"></figure>
               <div data-aos="fade-up"  data-aos-delay="100">
               <h2 class="text-white">Kureen Paige</h2>
-              <p>A freelance photographer who specializes in photographing special events, senior pictures, portraits and sporting events.  Photography started as a hobby and a way to capture my daughter's cheerleading competitions.  The more fun I had the more events I shot.  I'm done weddings, family reunions, office events and birthday parties.  If its interesting and challenging, I'll shoot it.  I've done some video work and recently started drone video recording. Thank you for visiting my site and please tell a friend.</p>
+              <p>I am a freelance photographer specializing in capturing special events, senior pictures, portraits, and sporting events. My journey in photography began as a hobby while capturing moments at my daughter's cheerleading competitions. The more I immersed myself in this passion, the more diverse events I covered. From weddings and family reunions to office events and birthday parties, I have experience in a wide range of photography projects. If it's interesting and challenging, I am eager to take on the task. Additionally, I have ventured into video production and recently started recording drone videos. Thank you for visiting my site, and please consider recommending my services to a friend.</p>
 
               <!-- check mark list
               <div class="d-block d-md-flex mt-5">
